Fix HTML encoding issues in page2.html

--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@
             <a href="index.html">HOME</a>
             <a href ="page3.html">CONTACT US</a>
             <div class ="options-menu">
-                <button id ="dropbtn">Dropdown
+                <button id ="dropbtn">More Information
                     <i class = "fa fa-caret-down"></i>
                 </button>
                     <div id ="dropdown-content">
@@ -136,4 +136,5 @@
 
     <script src="PTSscript/page-2.js"></script> 
     </body>
+
 </html>
